syntax = "proto3";

package core;
option go_package = "github.com/jalexanderII/zero_fintech/gen/Go/core";

import "common/common.proto";
import "google/protobuf/field_mask.proto";
import "common/payment_task.proto";


// CRUD Methods
message CreatePaymentTaskRequest {
  common.PaymentTask payment_task = 1;
}

message GetPaymentTaskRequest {
  string id = 1;
}

message UpdatePaymentTaskRequest {
  string id = 1;
  common.PaymentTask payment_task = 2;
  google.protobuf.FieldMask mask = 3;
}

message DeletePaymentTaskRequest {
  string id = 1;
}

message ListPaymentTaskRequest {}

message ListPaymentTaskResponse {
  repeated common.PaymentTask payment_tasks = 1;
}

message DeletePaymentTaskResponse {
  common.DELETE_STATUS status = 1;
  common.PaymentTask payment_task = 2;
}

message CreateManyPaymentTaskRequest {
  repeated common.PaymentTask payment_tasks = 1;
}

message CreateManyPaymentTaskResponse {
  repeated string payment_task_ids = 1;
}